<resources>
    <string name="app_name">Scouting App V2</string>
    <string name="title_scout">Scouting</string>
    <string name="title_data">Data</string>
    <string name="title_analyze">Analyze</string>
    <string name="export">Export</string>
    <string name="stash">STASH</string>
    <string name="update">UPDATE</string>
    <string name="details">Details:</string>
    <string name="match_number">Match Number</string>
    <string name="team_number">Team Number</string>
    <string name="auto">Auto:</string>
    <string name="auto_drop">Drop</string>
    <string name="marker">Marker</string>
    <string name="auto_parked">Auto Park</string>
    <string name="sample">Sample</string>
    <string name="teleop">Teleop:</string>
    <string name="depot_minerals">Depot Minerals</string>
    <string name="lander_minerals">Lander Minerals</string>
    <string name="endgame">Endgame</string>
    <string name="end_hang">Hang</string>
    <string name="end_partial_park">Partial Park</string>
    <string name="end_full_park">Full Park</string>
    <string name="double_sample">Double Sample</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="delete">Delete</string>
    <string name="delete_button">Delete</string>
    <string name="export_button">Export</string>
    <string name="work_in_progress">Work in Progress</string>
</resources>
