<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="835dp"
    android:layout_marginBottom="56dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".Activities.ScoutingActivity">

    <Button
        android:id="@+id/stash"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="1000dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/stash"
        android:textColor="@color/colorBlack"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/details"

                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/match_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:textSize="29sp"
                android:hint="@string/match_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/team_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:textSize="29sp"
                android:hint="@string/team_number"
                android:inputType="number" />

            <TextView
                android:id="@+id/auto_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto"
                android:textSize="29sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <CheckBox
                android:id="@+id/auto_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/auto_drop" />

            <CheckBox
                android:id="@+id/auto_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/marker" />

            <CheckBox
                android:id="@+id/auto_park"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/auto_parked" />

            <CheckBox
                android:id="@+id/auto_sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/sample"
                />

            <CheckBox
                android:id="@+id/auto_double_sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/double_sample"
                />

            <TextView
                android:id="@+id/tele_op_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/teleop"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/depot_minerals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:textSize="29sp"
                android:hint="@string/depot_minerals"
                android:inputType="number" />

            <EditText
                android:id="@+id/lander_minerals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:textSize="29sp"
                android:hint="@string/lander_minerals"
                android:inputType="number" />

            <TextView
                android:id="@+id/end_game_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/endgame"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <CheckBox
                android:id="@+id/end_hang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/end_hang" />

            <CheckBox
                android:id="@+id/end_partial_park"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/end_partial_park" />

            <CheckBox
                android:id="@+id/end_full_park"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="29sp"
                android:text="@string/end_full_park" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>